<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/md"
    >

    <TextView
        android:text="@string/signUp_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#070707"

        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColor="#090909"
        android:hint=" Enter your Name"

        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/fullNameField"
        />

    <TextView
        android:text="@string/signUp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#0C0C0C"

        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="Email"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#0C0C0C"

        android:layout_marginTop="10dp"
        android:id="@+id/emailField" />

    <TextView
        android:text="@string/signUp_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#0E0E0E"

        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordField"
        android:hint=" Enter your Password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#0E0E0E"



        />

    <Button
        android:text="@string/signUp_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login"
        android:textColor="@color/profileBackground"

        android:id="@+id/cancelBtn" />

    <Button
        android:text="@string/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/signUpBtn"
        android:background="@drawable/btn_login"
        android:layout_below="@+id/passwordField"
        android:textColor="@color/profileBackground"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/btn_login"-->
<!--        android:layout_marginStart="80dp"-->
<!--        android:layout_marginEnd="80dp"-->
<!--        android:text="Profile"-->
<!--        android:onClick="onClick"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:id="@+id/profileButton"-->
<!--        android:textSize="25sp"/>-->


</RelativeLayout>
